--- a/package.json
+++ b/package.json
@@ -9,9 +9,23 @@
     "dist",
     "views"
   ],
-  "scripts": {
-    "postinstall": "preconstruct dev",
-    "build": "preconstruct build"
+  "dependencies": {
+    "@babel/runtime": "^7.16.3",
+    "@keystone-ui/core": "^4.0.0",
+    "@keystone-ui/fields": "^6.0.0"
+  },
+  "peerDependencies": {
+    "@keystone-6/core": ">=^1.0.0",
+    "react": "^17.0.2"
+  },
+  "devDependencies": {
+    "@keystone-6/core": "^1.0.0",
+    "@types/react": "^17.0.35",
+    "graphql": "^15.7.2",
+    "react": "^17.0.2"
+  },
+  "engines": {
+    "node": "^12.20 || >= 14.13"
   },
   "preconstruct": {
     "entrypoints": [
@@ -19,36 +33,5 @@
       "views/index.tsx"
     ]
   },
-  "keywords": [
-    "keystone",
-    "nestedset"
-  ],
-  "author": "Nikitoring",
-  "license": "MIT",
-  "dependencies": {
-    "@babel/core": "^7.16.0",
-    "@babel/plugin-proposal-class-properties": "^7.16.0",
-    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
-    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@babel/plugin-transform-runtime": "^7.16.0",
-    "@babel/preset-env": "^7.16.0",
-    "@babel/preset-react": "^7.16.0",
-    "@babel/preset-typescript": "^7.16.0",
-    "@babel/runtime": "^7.16.3",
-    "@keystone-6/core": "^1.0.0",
-    "@keystone-ui/fields": "^6.0.0",
-    "@manypkg/cli": "0.18.0",
-    "@preconstruct/cli": "2.1.5",
-    "@types/react": "^17.0.35",
-    "react": "^17.0.2",
-    "typescript": "^4.4.4"
-  },
-  "peerDependencies": {
-    "@keystone-6/core": ">=^1.0.0",
-    "react": "^17.0.2"
-  },
-  "repository": "https://github.com/Nikitoring/keystone-field-nested-set",
-  "engines": {
-    "node": "^12.20 || >= 14.13"
-  }
+  "repository": "https://github.com/Nikitoring/keystone-field-nested-set"
 }
