--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "dist",
     "views"
   ],
+  "scripts": {
+    "postinstall": "preconstruct dev"
+  },
   "dependencies": {
     "@babel/runtime": "^7.16.3",
     "@babel/core": "^7.16.0",
