--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "@babel/runtime": "^7.16.3",
     "@keystone-ui/core": "^4.0.0",
-    "@keystone-ui/fields": "^6.0.0"
+    "@keystone-ui/fields": "^6.0.0",
+    "@preconstruct/cli": "^2.1.5"
   },
   "peerDependencies": {
     "@keystone-6/core": ">=^1.0.0",
