--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "keystone-field-nested-set",
-  "version": "0.0.2",
+  "version": "0.0.1",
   "description": "nested set field for keystonejs",
   "main": "dist/keystone-field-nested-set.cjs.js",
   "module": "dist/keystone-field-nested-set.esm.js",
@@ -9,22 +9,51 @@
     "dist",
     "views"
   ],
+  "scripts": {
+    "postinstall": "preconstruct dev && manypkg check",
+    "format:file": "prettier --write",
+    "format": "prettier --write \"**/*.js{,on}\" \"**/*.md\"",
+    "fresh": "yarn clean && yarn",
+    "clean": "rimraf \"**/cypress/{screenshots,videos,reports}\" \"**/node_modules\" \"**/yarn-error.log\" \"**/out.log\" \"**/.DS_Store\" \"**/dist\"",
+    "postinstall-examples": "for d in `find examples -type d -maxdepth 1 -mindepth 1`; do echo $d; cd $d; yarn keystone postinstall --fix; cd ../..; done",
+    "build": "preconstruct build",
+    "changeset": "changeset",
+    "version-packages": "changeset version",
+    "publish-changed": "yarn build && yarn changeset publish"
+  },
   "dependencies": {
+    "@babel/core": "^7.16.0",
+    "@babel/plugin-proposal-class-properties": "^7.16.0",
+    "@babel/plugin-proposal-object-rest-spread": "^7.16.0",
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.16.0",
+    "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
+    "@babel/preset-typescript": "^7.16.0",
     "@babel/runtime": "^7.16.3",
-    "@keystone-ui/core": "^4.0.0",
-    "@keystone-ui/fields": "^6.0.0",
+    "@changesets/cli": "^2.18.1",
+    "@keystone-6/core": "^1.0.0",
+    "@manypkg/cli": "0.18.0",
     "@preconstruct/cli": "^2.1.5",
-    "@preconstruct/next": "^3.0.1",
-    "graphql-upload": "^12.0.0"
+    "@types/jest": "^27.0.2",
+    "@types/react": "^17.0.35",
+    "cross-env": "^7.0.3",
+    "dotenv": "^10.0.0",
+    "graphql": "^15.7.2",
+    "prettier": "^2.4.1",
+    "react": "^17.0.2",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.4.4"
+  },
+  "prettier": {
+    "proseWrap": "preserve",
+    "singleQuote": true,
+    "trailingComma": "es5",
+    "printWidth": 100,
+    "arrowParens": "avoid"
   },
   "peerDependencies": {
     "@keystone-6/core": ">=^1.0.0",
-    "react": "^17.0.2"
-  },
-  "devDependencies": {
-    "@keystone-6/core": "^1.0.0",
-    "@types/react": "^17.0.35",
-    "graphql": "^15.7.2",
     "react": "^17.0.2"
   },
   "engines": {
@@ -33,8 +62,9 @@
   "preconstruct": {
     "entrypoints": [
       "index.ts",
-      "views/index.tsx"
-    ]
+      "views"
+    ],
+    "distFilenameStrategy": "unscoped-package-name"
   },
   "repository": "https://github.com/Nikitoring/keystone-field-nested-set"
 }
