--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "dist",
     "views"
   ],
+  "scripts": {
+    "postinstall": "preconstruct dev",
+    "format": "prettier --write \"**/*.js{,on}\" \"**/*.md\"",
+    "build": "preconstruct build"
+  },
   "dependencies": {
     "@babel/core": "^7.16.0",
     "@babel/plugin-proposal-class-properties": "^7.16.0",
